logs/telarchive.log
Listing '.'...
Listing './bin'...
Compiling './bin/do_fetchsdss.py'...
Compiling './bin/do_fetchsdss_spectra.py'...
Compiling './bin/dosearch.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/telarchive'...
Compiling './lib/python3.5/site-packages/telarchive/archive_analyze.py'...
***   File "./lib/python3.5/site-packages/telarchive/archive_analyze.py", line 116
    print "Unable to find number of records retrieved"
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/telarchive/archive_search.py'...
***   File "./lib/python3.5/site-packages/telarchive/archive_search.py", line 219
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/telarchive/eso_archive_old.py'...
***   File "./lib/python3.5/site-packages/telarchive/eso_archive_old.py", line 204
    print nTelescopesFound
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/telarchive/fetchsdss.py'...
***   File "./lib/python3.5/site-packages/telarchive/fetchsdss.py", line 77
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/telarchive/fetchsdss_spectra.py'...
***   File "./lib/python3.5/site-packages/telarchive/fetchsdss_spectra.py", line 62
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/telarchive/get_sdssfiles.py'...
***   File "./lib/python3.5/site-packages/telarchive/get_sdssfiles.py", line 315
    print infoHeader["content-type"]
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/telarchive/getcoords.py'...
***   File "./lib/python3.5/site-packages/telarchive/getcoords.py", line 138
    print messageString
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/telarchive/sdss_combined_archive.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (sdss_combined_archive.py, line 70)
Compiling './lib/python3.5/site-packages/telarchive/utils.py'...
***   File "./lib/python3.5/site-packages/telarchive/utils.py", line 11
    return `self.value`
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/telarchive-1.8.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
